# nom-teltonika

./: .commitlintrc.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  clippy.yml  commits.yml  publish.yml  release-plz.yml  test.yml  test_and_release.yml
.zed/: settings.json
benches/: decoder.rs  parser.rs
docs/: migration-0.2.md
examples/: from_buffer.rs  from_file.rs  tcp_server.rs  tcp_server_tokio.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_tcp_frame.rs
src/: checksum.rs  decoder.rs  encode.rs  encoder.rs  lib.rs  model.rs  parser.rs  protocol.rs  stream.rs  tcp.rs  udp.rs
tests/: FIXTURES.md  decoder_tcp.rs  decoder_udp.rs  errors.rs  limits.rs  parser.rs  parser_tcp.rs  parser_udp.rs  public_api.rs  serde.rs  stream_async.rs  stream_sync.rs  timestamps.rs  tracing.rs  udp_socket.rs
tests/common/: mod.rs
