[package]
name = "nom-teltonika"
version = "0.1.2"
edition = "2021"
description = "Teltonika protocol parser"
readme = "README.md"
repository = "https://github.com/DamianoPellegrini/nom-teltonika"
license = "MIT"
keywords = ["parser", "library", "binary", "teltonika", "protocol"]
categories = ["encoding", "parser-implementations"]
publish = true

[features]
serde = ["dep:serde", "dep:serde_bytes", "chrono/serde"]

[dependencies]
chrono = "0.4.26"
log = "0.4.19"
nom = "7.1.3"
serde = { version = "1.0.171", default-features = false, features = [
    "std",
    "derive",
], optional = true }
serde_bytes = { version = "0.11.11", optional = true }

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.102"
