[package]
name = "nom-teltonika"
version = "0.1.3"
edition = "2021"
description = "Teltonika protocol parser"
readme = "README.md"
repository = "https://github.com/DamianoPellegrini/nom-teltonika"
license = "MIT"
keywords = ["parser", "library", "binary", "teltonika", "protocol"]
categories = ["encoding", "parser-implementations"]
publish = true

[features]
serde = ["dep:serde", "dep:serde_bytes", "chrono/serde"]

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
log = "0.4.19"
nom = "7.1.3"
serde = { version = "1.0.171", default-features = false, optional = true, features = [
    "std",
    "derive",
] }
serde_bytes = { version = "0.11.11", optional = true }
tokio = { version = "1.11.0", default-features = false, optional = true, features = ["io-util"]}

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.102"
