[package]
name = "nom-teltonika"
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
description = "A dependency-free-core Teltonika binary protocol decoder and encoder"
readme = "README.md"
repository = "https://github.com/DamianoPellegrini/nom-teltonika"
license = "MIT"
keywords = ["decoder", "library", "binary", "teltonika", "protocol"]
categories = ["encoding", "decoder-implementations"]
publish = true
include = [
    "src/**",
    "examples/**",
    "benches/**",
    "tests/*.rs",
    "tests/*.md",
    "tests/common/*.rs",
    "docs/migration-0.2.md",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[features]
default = []
tokio = ["dep:tokio"]
serde = ["dep:serde", "dep:serde_bytes"]
chrono = ["dep:chrono"]
tracing = ["dep:tracing"]

[dependencies]
chrono = { version = "0.4.26", default-features = false, optional = true }
serde = { version = "1.0.171", default-features = false, optional = true, features = ["std", "derive"] }
serde_bytes = { version = "0.11.11", optional = true }
tokio = { version = "1.29.1", default-features = false, optional = true, features = ["io-util", "net"] }
tracing = { version = "0.1.44", default-features = false, optional = true, features = ["std"] }

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
serde_json = "1.0.102"
tokio = { version = "1.29.1", features = ["io-util", "net", "macros", "rt"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }

[[bench]]
name = "decoder"
harness = false

[package.metadata.docs.rs]
all-features = true
