[package]
name = "nom-teltonika-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nom-teltonika = { path = ".." }

[[bin]]
name = "parse_tcp_frame"
path = "fuzz_targets/parse_tcp_frame.rs"
test = false
doc = false
bench = false
